kubernetes/testing/sample/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sample-app
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
