kubernetes/testing/sample/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: sample-app
  labels:
    app.kubernetes.io/name: sample-app
    app.kubernetes.io/instance: sample-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: sample-app
      app.kubernetes.io/instance: sample-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sample-app
        app.kubernetes.io/instance: sample-app
    spec:
      containers:
        - name: sample
          image: nginx:1.28.2-alpine
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: sample-app-data
        - name: template
          configMap:
            name: sample-app-content
