kubernetes/testing/sample/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app
  namespace: sample-app
  labels:
    app.kubernetes.io/name: sample-app
    app.kubernetes.io/instance: sample-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sample-app
    app.kubernetes.io/instance: sample-app
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
